[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclaw"
version = "0.4.1"
description = "Export your coding agent conversations to Hugging Face as structured data"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    {name = "Banodoco"},
]
keywords = ["claude-code", "codex", "gemini-cli", "opencode", "openclaw", "huggingface", "dataset", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving",
]
dependencies = [
    "huggingface_hub>=0.35.0",
    "orjson>=3.0.0",
    "pyahocorasick>=2.3.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/banodoco/dataclaw"
Repository = "https://github.com/banodoco/dataclaw"
Issues = "https://github.com/banodoco/dataclaw/issues"

[project.scripts]
dataclaw = "dataclaw.cli:main"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
